@@ -115,8 +115,9 @@ module ActiveMerchant
           xml.tag! 'Name' do
             xml.tag! 'Full', address[:name]
           end
-          xml.tag! 'Address1', address[:address1] unless address[:address1].blank?
-          xml.tag! 'Address2', address[:address2] unless address[:address2].blank?
+          xml.tag! 'Address1', address[:company] unless address[:company].blank?
+          xml.tag! 'Address2', address[:address1] unless address[:address1].blank?
+          xml.tag! 'Address3', address[:address2] unless address[:address2].blank?
           xml.tag! 'City', address[:city] unless address[:city].blank?
           xml.tag! 'State', address[:state] unless address[:state].blank?
           
