@@ -1,3 +1,4 @@
+# * Map company to address1 with Shipwire
 # * Sync posts_data.rb with ActiveMerchant
 # * Add support for fetching tracking numbers to Shipwire
 # * Move email to the options hash. Refactor Shipwire commit method.
